Removed duplicate withdrawals/mainnet test cases
Signed-off-by: Jason Frame <jason.frame@consensys.net>